# rules_go

./: .bazelrc  MODULE.bazel  WORKSPACE  go.mod  go.sum
extras/: gomock.bzl
go/: def.bzl
go/private/: BUILD.sdk.bazel  context.bzl  extensions.bzl  providers.bzl  sdk.bzl
go/private/actions/: archive.bzl  compilepkg.bzl
go/private/extensions/: go_mod.bzl
go/private/rules/: sdk.bzl  test.bzl
go/tools/builders/: nogo_main.go
tests/bcr/: BUILD.bazel  MODULE.bazel  language_version_test.go
